# api/taskService.swagger.yml
@@ -38,7 +38,7 @@ paths:
         200:
           description: scheme in json
           schema:
-            $ref: "#/definitions/TaskResponse"
+            $ref: "#/definitions/FetchTask"
         '404':
           description: Requested page not found
         '500':
@@ -95,7 +95,7 @@ paths:
         200:
           description: scheme in json
           schema:
-            $ref: "#/definitions/FetchTask"
+           $ref: "#/definitions/FullTask"
         '404':
           description: A task with the current ID was not found.
         '500':
@@ -134,6 +134,8 @@ definitions:
         type: string
       path:
         type: string
+      progress:
+        type: string
       body:
         type: string
       headers:
@@ -142,4 +144,48 @@ definitions:
           type: array
           items:
             type: string
-
+  FullTask:
+    type: object
+    properties:
+      request:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int
+          method:
+            type: string
+          path:
+            type: string
+          progress:
+            type: string
+          body:
+            type: string
+          headers:
+            type: object
+            additionalProperties:
+              type: array
+              items:
+                type: string
+      response:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: int
+          httpStatus:
+            type: integer
+            format: int
+          method:
+            type: string
+          path:
+            type: string
+          headers:
+            type: object
+            additionalProperties:
+              type: array
+              items:
+                type: string
+          bodyLenght:
+            type: integer
+            format: int
