# internal/operations.go
@@ -8,7 +8,7 @@ import (
 	"net/http"
 )
 
-func GetResponse(params operations.CreateFetchTaskParams) middleware.Responder {
+func CreateFetchTask(params operations.CreateFetchTaskParams) middleware.Responder {
 	ft := new(models.FetchTask)
 	ft.Body = params.Task.Body
 	ft.Path = params.Task.Path
@@ -20,19 +20,7 @@ func GetResponse(params operations.CreateFetchTaskParams) middleware.Responder {
 		return middleware.Error(http.StatusInternalServerError, "Error : Unable to add tasks to database")
 	}
 	taskService.TasksChan <- ft
-	err = <-taskService.ErrorsChan
-	if err != nil {
-		return middleware.Error(http.StatusInternalServerError, "Error : Unable to get response")
-	}
-	taskResponse, err := taskService.Store.GetTaskResponseByFtID(ft.ID)
-	if err != nil {
-		return middleware.Error(http.StatusInternalServerError, "Error : Unable to get response")
-	}
-	ft.Status = models.StatusCompleted
-	if err = taskService.Store.UpdateFetchTask(ft); err != nil {
-		return middleware.Error(http.StatusInternalServerError, "Error : Unable to get response")
-	}
-	return operations.NewCreateFetchTaskOK().WithPayload(taskResponse.ConvertForResp())
+	return operations.NewCreateFetchTaskOK().WithPayload(ft.ConvertToSwaggerModel())
 }
 
 func GetTasks(params operations.GetAllTasksParams) middleware.Responder {
@@ -42,7 +30,7 @@ func GetTasks(params operations.GetAllTasksParams) middleware.Responder {
 	}
 	tasksResp := make([]*models2.FetchTask, len(tasks))
 	for i := 0; i < len(tasks); i++ {
-		tasksResp[i] = tasks[i].ConvertForResp()
+		tasksResp[i] = tasks[i].ConvertToSwaggerModel()
 	}
 	return operations.NewGetAllTasksOK().WithPayload(tasksResp)
 }
@@ -61,31 +49,60 @@ func GetTask(params operations.GetTaskParams) middleware.Responder {
 	if err != nil {
 		return middleware.Error(http.StatusNotFound, "Error : Unable to get tasks from database")
 	}
-	return operations.NewGetTaskOK().WithPayload(task.ConvertForResp())
+	resp, err := taskService.Store.GetTaskResponseByFtID(id)
+	if err != nil {
+		return middleware.Error(http.StatusNotFound, "Error : Unable to get tasks from database")
+	}
+	if resp.Err != "" {
+		return middleware.Error(http.StatusNotFound, "no response for this task")
+	}
+	return operations.NewGetTaskOK().WithPayload(&models2.FullTask{
+		Request:  ConvertToRequest(task.ConvertToSwaggerModel()),
+		Response: ConvertToResponse(resp.ConvertToSwaggerModel()),
+	})
 }
 
-func Worker(tasks chan *models.FetchTask, response chan *models.TaskResponse, errors chan error) {
+func Worker(tasks <-chan *models.FetchTask, response chan<- *models.TaskResponse) {
 	for task := range tasks {
+		task.Status = models.StatusInProgress
+		taskService.Store.UpdateFetchTask(*task)
 		res, err := taskService.Requester.DoRequest(*task)
 		if err != nil {
-			errors <- err
-			return
-		}
-		task.Status = models.StatusInProgress
-		if err = taskService.Store.UpdateFetchTask(task); err != nil {
-			errors <- err
+			response <- &models.TaskResponse{
+				FetchTaskID: task.ID,
+				Err:         err.Error(),
+			}
 			return
 		}
 		res.FetchTaskID = task.ID
 		response <- res
+		task.Status = models.StatusCompleted
+		taskService.Store.UpdateFetchTask(*task)
 	}
 }
 
-func Saver(response chan *models.TaskResponse, errors chan error) {
-	_, err := taskService.Store.AddTaskResponse(<-response)
-	if err != nil {
-		errors <- err
-		return
+func Saver(response <-chan *models.TaskResponse) {
+	taskService.Store.AddTaskResponse(<-response)
+}
+
+func ConvertToResponse(response *models2.TaskResponse) *models2.FullTaskResponse {
+	return &models2.FullTaskResponse{
+		ID:         response.ID,
+		BodyLenght: response.BodyLenght,
+		Method:     response.Method,
+		HTTPStatus: response.HTTPStatus,
+		Headers:    response.Headers,
+		Path:       response.Path,
 	}
-	errors <- nil
+}
+
+func ConvertToRequest(request *models2.FetchTask) *models2.FullTaskRequest {
+	return &models2.FullTaskRequest{
+		ID:       request.ID,
+		Progress: request.Progress,
+		Body:     request.Body,
+		Path:     request.Path,
+		Method:   request.Method,
+		Headers:  request.Headers,
+	}
 }
